# web3-txn-fee-tracker

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json
backend/: pyproject.toml
backend/app/: backend_pre_start.py  binance.py  crud.py  etherscan.py  main.py  models.py  tasks.py  web3.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 65ad527035d2_update_all_datetime_columns_type_to_be_.py  9f988116d214_initial_migration.py  ac8f3647552c_initial_migration.py  c07b6f5d97f3_update_column_type_for_transaction.py  d8beaed6a56e_add_unique_constraint_on_spotprice_table.py  edf467142bb6_update_datetime_column_type_to_be_.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: prices.py  transaction.py  utils.py
backend/app/core/: config.py  db.py
backend/app/tests/api/routes/: test_prices.py  test_transaction.py
backend/app/tests/crud/: test_crud.py
backend/app/tests/utils/: utils.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  TransactionTracker.js
